Correcting height of home-icon in department-name-wrapper, which affects spacing between page header and page body.

--- a/sites/all/themes/unca_zenfoundation/css/unca_zenfoundation.css
+++ b/sites/all/themes/unca_zenfoundation/css/unca_zenfoundation.css
@@ -11921,7 +11921,7 @@ Added back in by Luke Withrow on 2013-05-15
 #home-icon {
   background: url("../images/home-icon.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
   float: right;
-  height: 30px;
+  height: 20px;
   margin-bottom: 0;
   width: 30px;
   padding-right: 46px;
