--- a/sites/all/themes/unca_zenfoundation/sass/unca/_page.tpl.scss
+++ b/sites/all/themes/unca_zenfoundation/sass/unca/_page.tpl.scss
@@ -8,7 +8,7 @@
 #home-icon {
   background: url("../images/home-icon.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
   float: right;
-  height: 30px;
+  height: 20px;
   margin-bottom: 0;
   width: 30px;
   padding-right: 46px; 
